@@ -1,3 +1,11 @@
+2004-12-03  Todd Berman  <tberman@off.net>
+
+	* Gui/SourceEditorBuffer.cs:
+	* Gui/SourceEditorView.cs:
+	* Gui/SourceEditorDisplayBinding.cs:
+	* CodeCompletion/CompletionListWindow.cs:
+	* CodeCompletion/CompletionWindow.cs: Update to new gtk# API.
+
 2004-11-24  Alp Toker  <alp@atoker.com>
 
 	* CodeCompletion/CodeCompletionData.cs:
